syntax = "proto3";

option csharp_namespace = "PaymentServiceContract";

package pay;


service Payer {
  rpc Pay(CardRequest) returns (ActionResult);
}

message CardRequest{
	string card=1;
}

message ActionResult{
	bool exito=1;
}

message ErrorReply{
	string error=1;
}
